--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -7,35 +7,9 @@
 {% block extra_css %}
 <style>
 body {
-    background-image: url('{{ url_for('static', filename='images/hinh-nen.webp') }}');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
+    background: #ffd107;
     min-height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-@supports (-webkit-touch-callout: none) {
-    body {
-        background: none;
-        position: relative;
-    }
-
-    body::before {
-        content: '';
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        height: 100dvh; /* Dynamic viewport height - tự động điều chỉnh khi thanh địa chỉ ẩn/hiện */
-        background-image: url('{{ url_for('static', filename='images/hinh-nen.webp') }}');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        z-index: -1;
-    }
 }
 
 nav.top-navbar {
